force-app/main/default/objects/prescription__c/prescription__c.object-meta.xml
<CustomObject>
    <label>prescription</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>