force-app/main/default/objects/prescription__c/fields/dosageTime__c.field-meta.xml
<CustomField>
    <fullName>dosageTime__c</fullName>
    <label>dosageTime</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>