force-app/main/default/objects/prescription__c/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <label>duration</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>