force-app/main/default/objects/prescription__c/fields/genericName__c.field-meta.xml
<CustomField>
    <fullName>genericName__c</fullName>
    <label>genericName</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>