force-app/main/default/objects/prescription__c/fields/medicineName__c.field-meta.xml
<CustomField>
    <fullName>medicineName__c</fullName>
    <label>medicineName</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>