force-app/main/default/objects/prescription__c/fields/numOfDays__c.field-meta.xml
<CustomField>
    <fullName>numOfDays__c</fullName>
    <label>numOfDays</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>