force-app/main/default/objects/prescription__c/fields/opdPaperId__c.field-meta.xml
<CustomField>
    <fullName>opdPaperId__c</fullName>
    <label>opdPaperId</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>