force-app/main/default/objects/prescription__c/fields/patientId__c.field-meta.xml
<CustomField>
    <fullName>patientId__c</fullName>
    <label>patientId</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>